--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         updateBannerVisibility();
       }
 
-      var buildUrl = "WebglBuild";
+      var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WebglBuild.loader.js";
       var config = {
         dataUrl: buildUrl + "/WebglBuild.data.gz",
